privacy policy, legal notice and terms and conditions pages completed

--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -3,28 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Privacy Policy - Fetta di Beatitudine Pizzeria</title>
+    <title>Terms and Conditions - Fetta di Beatitudine Pizzeria</title>
     <meta
       name="description"
-      content="Read the privacy policy of Fetta di Beatitudine to understand how we collect, use, and protect your personal information."
+      content="Read the terms and conditions for Fetta di Beatitudine, outlining the rules, regulations, and legal agreements related to our services and website."
     />
 
     <!-- Open Graph / Facebook -->
     <meta
       property="og:title"
-      content="Privacy Policy - Fetta di Beatitudine Pizzeria"
+      content="Terms and Conditions - Fetta di Beatitudine Pizzeria"
     />
     <meta
       property="og:description"
-      content="Learn about the privacy practices of Fetta di Beatitudine, including details on data collection, usage, and protection measures."
+      content="Review the terms and conditions for using Fetta di Beatitudine's services, including legal agreements and regulations you agree to by accessing our website."
     />
     <meta
       property="og:image"
-      content="https://www.fettadibeatitudine.com/images/privacy-og-image.jpg"
+      content="https://www.fettadibeatitudine.com/images/terms-og-image.jpg"
     />
     <meta
       property="og:url"
-      content="https://www.fettadibeatitudine.com/privacy-policy"
+      content="https://www.fettadibeatitudine.com/terms-and-conditions"
     />
     <meta property="og:type" content="website" />
 
@@ -32,21 +32,21 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Privacy Policy - Fetta di Beatitudine Pizzeria"
+      content="Terms and Conditions - Fetta di Beatitudine Pizzeria"
     />
     <meta
       name="twitter:description"
-      content="Explore the privacy policy of Fetta di Beatitudine to understand how your data is managed and protected."
+      content="Understand the terms and conditions governing the use of Fetta di Beatitudine's website and services."
     />
     <meta
       name="twitter:image"
-      content="https://www.fettadibeatitudine.com/images/privacy-twitter-image.jpg"
+      content="https://www.fettadibeatitudine.com/images/terms-twitter-image.jpg"
     />
 
     <!-- Additional Meta Tags -->
     <meta
       name="keywords"
-      content="Fetta di Beatitudine, privacy policy, data protection, personal information, data usage, privacy practices, pizzeria"
+      content="Fetta di Beatitudine, terms and conditions, legal agreements, service regulations, terms of service, pizzeria, user agreement"
     />
     <meta name="author" content="Fetta di Beatitudine Pizzeria" />
     <meta name="robots" content="noindex, follow" />
@@ -131,115 +131,131 @@
     <main class="main" id="main">
       <section class="legal__text">
         <h4 class="legal__list-title">
-          Terms and Conditions for Fetta di Beatitudine
+          Privacy Policy for Fetta di Beatitudine
         </h4>
         <p>
-          Welcome to Fetta di Beatitudine! By accessing or using our website and
-          services, you agree to comply with and be bound by the following terms
-          and conditions. Please review them carefully. If you do not agree with
-          any part of these terms and conditions, you should not use our website
-          or services.
+          At Fetta di Beatitudine, we are committed to protecting your privacy
+          and ensuring that your personal information is handled in a safe and
+          responsible manner. This Privacy Policy outlines how we collect, use,
+          disclose, and protect your personal information when you visit our
+          website or use our services.
         </p>
         <ol class="legal__list">
           <li>
-            Acceptance of Terms
+            Information We Collect
             <p>
-              By accessing or using our website, you agree to be bound by these
-              terms and conditions, as well as any other guidelines, rules, or
-              policies that may be posted on our website from time to time.
+              Personal Information: We may collect personal information that you
+              provide to us when you:
+            </p>
+            <ul class="subparagraphs__list">
+              <li>Make a reservation.</li>
+              <li>Place an order for delivery or pickup.</li>
+              <li>Subscribe to our newsletter.</li>
+              <li>Contact us with inquiries or feedback.</li>
+            </ul>
+
+            <p>
+              This information may include your name, email address, phone
+              number, delivery address, payment information, and any other
+              details you provide. Non-Personal Information: We may also collect
+              non-personal information about your visit to our website, such as
+              your IP address, browser type, operating system, referring
+              website, pages viewed, and the date and time of your visit.
             </p>
           </li>
           <li>
-            Use of Our Website
+            How We Use Your Information
+            <p>We use your personal information to:</p>
+            <ul class="subparagraphs__list">
+              <li>Process and fulfill your orders.</li>
+              <li>Confirm your reservations.</li>
+              <li>Send you order confirmations and updates.</li>
+              <li>Respond to your inquiries and provide customer support.</li>
+              <li>
+                Send you newsletters and promotional materials (if you have
+                opted in).
+              </li>
+              <li>Improve our website and services.</li>
+            </ul>
+            <p>We use non-personal information to:</p>
+            <ul class="subparagraphs__list">
+              <li>Analyze website usage and trends.</li>
+              <li>Improve our website and services.</li>
+              <li>Customize your website experience.</li>
+            </ul>
+          </li>
+          <li>
+            How We Share Your Information
+            <p>
+              We do not sell, trade, or otherwise transfer your personal
+              information to outside parties, except as described below:
+            </p>
             <ul class="subparagraphs__list">
               <li>
-                Eligibility: You must be at least 18 years old to use our
-                website or make a purchase.
+                Service Providers: We may share your personal information with
+                third-party service providers who assist us in operating our
+                website, conducting our business, or providing our services, as
+                long as those parties agree to keep this information
+                confidential.
               </li>
               <li>
-                Account Security: If you create an account, you are responsible
-                for maintaining the confidentiality of your account and password
-                and for restricting access to your computer. You agree to accept
-                responsibility for all activities that occur under your account
-                or password.
+                Legal Compliance: We may disclose your personal information if
+                required to do so by law or in response to valid requests by
+                public authorities.
               </li>
               <li>
-                Prohibited Conduct: You agree not to use our website for any
-                unlawful purpose or in any way that could harm Fetta di
-                Beatitudine or any third party.
+                Protection of Rights: We may disclose your personal information
+                to protect the rights, property, or safety of Fetta di
+                Beatitudine, our customers, or others.
               </li>
             </ul>
           </li>
           <li>
-            Products and Services
+            Cookies and Tracking Technologies
+            <p>We use cookies and similar tracking technologies to enhance your experience on our website. Cookies are small data files that are placed on your device when you visit a website. They help us understand how you use our website and enable certain features.
+              You can choose to disable cookies through your browser settings. However, disabling cookies may affect your ability to use certain features of our website</p>
+          </li>
+          <li>
+            Data Security
+            <p>We implement appropriate security measures to protect your personal information from unauthorized access, alteration, disclosure, or destruction. Despite our efforts, no security measures are completely secure, and we cannot guarantee the security of your information.</p>
+          </li>
+          <li>
+            Your Rights
+            <p>You have the right to:</p>
             <ul class="subparagraphs__list">
-              <li>Menu Items: All menu items and prices are subject to change without notice. We reserve the right to modify or discontinue any product or service at any time.</li>
-              <li>Orders: We strive to ensure that your order is accurately fulfilled. If you encounter any issues with your order, please contact us promptly to resolve the matter.</li>
-            </ul>
-          </li>
-          <li>
-            Payment and Billing
-            <ul class="subparagraphs__list">
-              <li>Payment Methods: We accept various payment methods as indicated on our website. By providing a payment method, you represent and warrant that you are authorized to use the designated payment method and that you authorize us to charge your payment method for the total amount of your order.</li>
-              <li>Billing Information: You agree to provide current, complete, and accurate purchase and account information for all purchases made through our website.</li>
-            </ul>
-          </li>
-          <li>
-            Delivery and Pickup
-            <ul class="subparagraphs__list">
-              <li>Delivery Areas: We deliver to specified areas only. Please check our website for delivery areas and times.</li>
-              <li>Pickup: If you choose pickup, please arrive at the specified time to collect your order.</li>
-            </ul>
-          </li>
-          <li>
-            Cancellations and Refunds
-            <ul class="subparagraphs__list">
-              <li>Cancellations: Orders can be canceled before they are prepared. Please contact us as soon as possible if you need to cancel your order.</li>
-              <li>Refunds: Refunds will be processed at our discretion. If you are unsatisfied with your order, please contact us to discuss your concerns.</li>
-            </ul>
-          </li>
-          <li>
-            Intellectual Property
-            <p>
-              All content on our website, including but not limited to text, images, logos, and graphics, is the property of Fetta di Beatitudine and is protected by copyright and trademark laws. You may not use, reproduce, or distribute any content from our website without our prior written permission.
-            </p>
-          </li>
-          <li>
-            Privacy Policy
-            <p>
-              Your privacy is important to us. Please review our Privacy Policy, which explains how we collect, use, and protect your personal information. By using our website, you consent to the processing of your personal data as described in our Privacy Policy.
-            </p>
-          </li>
-          <li>
-            Limitation of Liability
-            <p>
-              To the fullest extent permitted by law, Fetta di Beatitudine shall not be liable for any direct, indirect, incidental, special, or consequential damages that result from the use of, or the inability to use, our website or services.
-            </p>
-          </li><li>
-            Indemnification
-            <p>
-              You agree to indemnify, defend, and hold harmless Fetta di Beatitudine, its officers, directors, employees, and agents, from and against any claims, liabilities, damages, losses, and expenses, including reasonable attorney's fees, arising out of or in any way connected with your use of our website or services, or your violation of these terms and conditions.
-            </p>
-          </li><li>
-            Governing Law
-            <p>
-              These terms and conditions are governed by and construed in accordance with the laws of Italy. Any disputes arising from these terms and conditions or your use of our website shall be resolved in the courts of Italy.
-            </p>
-          </li><li>
-            Changes to Terms and Conditions
-            <p>
-              We reserve the right to modify these terms and conditions at any time. Any changes will be posted on this page and will take effect immediately upon posting. Your continued use of our website following the posting of changes constitutes your acceptance of such changes.
-            </p>
-          </li><li>
-            Contact Information
-            <p>
-              If you have any questions or concerns about these terms and conditions, please contact us at:
-Fetta di Beatitudine 123 Pizza Street, Flavor Town, Italy Email: info@fettadibeatitudine.com Phone: +123-456-7890
-            </p>
-          </li>
+              <li>
+                Access and review the personal information we hold about you.
 
 
-
+              </li>
+              <li>
+                Request correction of any inaccurate or incomplete information.
+              </li>
+              <li>Object to the processing of your personal information.</li>
+              <li>Withdraw your consent to our use of your personal information.</li>
+            </ul>
+            <p>To exercise any of these rights, please contact us at info@fettadibeatitudine.com.</p>
+          </li>
+          <li>
+            Third-Party Links
+            <p>
+              Our website may contain links to third-party websites. We are not responsible for the privacy practices or content of these websites. We encourage you to review the privacy policies of any third-party sites you visit.
+            </p>
+          </li>
+          <li>
+            Changes to This Privacy Policy
+            <p>
+              We may update this Privacy Policy from time to time. Any changes will be posted on this page and will take effect immediately upon posting. We encourage you to review this page periodically to stay informed about our privacy practices.
+            </p>
+          </li>
+          <li>
+            Contact Us
+            <p>
+              If you have any questions or concerns about this Privacy Policy, please contact us at:
+<p>Fetta di Beatitudine</p><p>123 Pizza Street, Flavor Town, Italy</p>
+<p>Email: info@fettadibeatitudine.com</p><p>Phone: +123-456-7890</p>
+            </p>
+          </li>
           
         </ol>
         <p class="legal__list-thanks">
@@ -247,8 +263,6 @@ Fetta di Beatitudine 123 Pizza Street, Flavor Town, Italy Email: info@fettadibea
           bliss!
         </p>
       </section>
-
-    
     </main>
 
     <!-- Include footer -->
